finished tests for FindCarsByCriteria method